# opentelemetry-proto-native

./: .gitignore  .gitmodules  README.md  pyproject.toml
benchmarks/: bench_serialize_spans.py
rust/: Cargo.toml  build.rs
rust/src/: lib.rs  proto.rs  pytypes.rs
rust/src/encode/: mod.rs  traces.rs
src/opentelemetry/proto_native/: __init__.py
src/opentelemetry/proto_native/_rs/: __init__.pyi
tests/: test_serialize_spans.py
